--- a/sass/large.sass
+++ b/sass/large.sass
@@ -3,7 +3,7 @@
 //HEADER
 header
     .hero-img
-        background-image: url('/Kurs cz 2/Portfolio/img/headerhd.jpg')
+        background-image: url('./img/headerhd.jpg')
         
 
         .fa-chevron-down
