--- a/sass/medium.css
+++ b/sass/medium.css
@@ -1,5 +1,5 @@
 header .hero-img {
-  background-image: url("/Kurs cz 2/Portfolio/img/headersd.jpg");
+  background-image: url("./img/headersd.jpg");
 }
 
 header h1 {
