--- a/sass/small.css
+++ b/sass/small.css
@@ -1,4 +1,4 @@
 header .hero-img {
-  background-image: url("/Kurs cz 2/Portfolio/img/headersd.jpg");
+  background-image: url("./img/headersd.jpg");
 }
 /*# sourceMappingURL=small.css.map */
