--- a/sass/medium.sass
+++ b/sass/medium.sass
@@ -3,7 +3,7 @@
 //HEADER    
 header
     .hero-img
-        background-image: url('/Kurs cz 2/Portfolio/img/headersd.jpg')
+        background-image: url('./img/headersd.jpg')
         
     h1 
         font-size: 42px
