--- a/sass/small.sass
+++ b/sass/small.sass
@@ -3,4 +3,4 @@
 //HEADER    
 header
     .hero-img
-        background-image: url('/Kurs cz 2/Portfolio/img/headersd.jpg')
+        background-image: url('./img/headersd.jpg')
