fixed broken images

--- a/sass/large.sass
+++ b/sass/large.sass
@@ -3,7 +3,7 @@
 //HEADER
 header
     .hero-img
-        background-image: url('./img/headerhd.jpg')
+        background-image: url('../img/headerhd.jpg')
         
 
         .fa-chevron-down
