--- a/sass/main.sass
+++ b/sass/main.sass
@@ -110,7 +110,7 @@ header
     .hero-img
         position: relative
         height: 100vh
-        background-image: url('./img/headerhd.jpg')
+        background-image: url('../img/headerhd.jpg')
         background-position: center
         background-size: cover
         background-attachment: fixed
@@ -421,7 +421,7 @@ header
 #contact
     .jumbotron
         position: relative
-        background-image: url('./img/contact.jpg')
+        background-image: url('../img/contact.jpg')
         background-position: top
         background-attachment: fixed
         background-size: cover
