--- a/sass/small.sass
+++ b/sass/small.sass
@@ -3,4 +3,9 @@
 //HEADER    
 header
     .hero-img
-        background-image: url('../img/headersd.jpg')
+        background-image: url('../img/headersd.jpg')    
+
+#portfolio
+    .card
+        width: 420px
+        height: 480px           
