--- a/sass/medium.sass
+++ b/sass/medium.sass
@@ -11,4 +11,9 @@ header
     .hero-text            
         p
              font-size: 20px
+
+#portfolio
+    .card
+        width: 420px
+        height: 480px                          
         
